# TinyGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/Containers/: BitArray.cpp  BitArray.h  ChunkStorage.cpp  ChunkStorage.h  ChunkStorage.test.cpp  TSparseArray.cpp  TSparseArray.h
Source/Events/: IEventHandler.cpp  IEventHandler.h  ISDLEventHandler.cpp  ISDLEventHandler.h  InputSystem.cpp  InputSystem.h
Source/Graphics/: GameApp.cpp  GameApp.h  ImGuiLayers.cpp  ImGuiLayers.h
Source/Main/: main.cpp
Source/Utils/: ArgsParser.cpp  ArgsParser.h  NonCopyable.h
